<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ComboKey Basic</string>
    <string name="app_icon_name">ComboKey Basic</string>
    <string name="kbd_service_name_in_device_settings">ComboKeyBasic</string>
    <string name="theme_defaultvalue_in_english">Basic</string>
    <string name="filter_title_viewcombokeycom">ComboKey.com</string>
    <string name="app_default_locale_main">en-US</string>
    <string name="app_default_locale_aux">es-ES</string>
    <string name="main_language_defaultvalue_in_english">English</string>
    <string name="aux_language_defaultvalue_in_english">Spanish</string>
    <string name="main_layout_defaultvalue_in_english">English_Optimized</string>
    <string name="aux_layout_defaultvalue_in_english">Spanish_Optimized</string>
    <string name="clear_screen">Delete</string>
    <string name="send_sms">Send as SMS</string>
    <string name="copy">Copy</string>
    <string name="help">Help</string>
    <string name="ok">"OK"</string>
    <string name="no_audio_recording_permission">"No audio recording permission."</string>
    <string name="no_internet_permission">"No internet permission."</string>
    <string name="network_operation_timed_out">"Network operation timed out."</string>
    <string name="other_network_related_errors">"Network related errors."</string>
    <string name="audio_recording_error">"Audio recording error."</string>
    <string name="server_error_or_no_internet">"Server error or no internet."</string>
    <string name="padheight_defaultvalue">10</string>
    <string name="padtype_defaultvalue">0</string>
    <string name="landscapecolumns_defaultvalue">3</string>
    <string name="speaktype_defaultvalue">2</string>
    <string name="tiptype_defaultvalue">2</string>
    <string name="type_method_defaultvalue">1</string>
    <string name="pleaseaddcombokeyboard">Next you will be taken to the Settings of your device where you should turn on ComboKey on the list of available keyboards.\n\n
    You will be asked to trust on ComboKey as your keyboard by pressing OK a couple of times.\n\n
    Your old keyboard will also be available as before.\n\n
    As the author of this app, I assure ComboKey does not collect any personal or other information.\n\n
    - tiptyper, author of ComboKey</string>
    <string name="addkbd">+</string>
    <string name="new_paragraph">\n\n</string>
    <string name="settings_language_header">Main Language</string>
    <string name="settings_language2_header">Aux Language</string>
    <string name="settings_language_text">Set the main language for the keyboard. Based on selected language, the most common letters are directly visible and native letters are available.</string>
    <string name="settings_language2_text">Set the auxiliary language for the keyboard. You can switch quickly between this and the main language during typing. </string>
    <string name="settings_tips_header">Tips for beginners</string>
    <string name="settings_tips_text">Show available, normally hidden, characters on the buttons. Feature to be used while learning the method. NOTE: Alternatively, you can always press and hold any button for a short period to see what else is available, without typing a letter!</string>
    <string name="settings_tiptype_header">Tips options</string>
    <string name="settings_tiptype_text">The Tips showing where to find more characters can be shown on the lighter main buttons, or on the darker buttons/area between them.</string>
    <string name="settings_type_method_header">Using Combos and Swipes</string>
    <string name="settings_type_method_text">If you use occasionally Swipes (one hand) and Combos (simultaneous presses using two hands), select the recommended setting on top. When typing fast, depending on your way of typing, it might be useful e.g. to disable Combos if you never use them (using Swipes instead).</string>
    <string name="settings_sound_header">Sound on</string>
    <string name="settings_sound_text">Use sound on key presses. Helps to detect missed/wrong keys.</string>
    <string name="settings_sound_volume_header">Sound Volume</string>
    <string name="settings_sound_volume_text">Set key press sound volume.</string>
    <string name="settings_vibrator_header">Vibrator on</string>
    <string name="settings_vibrator_text">Use the vibrator to indicate a swipe to another button and a key press that combines two buttons simultaneously.</string>
    <string name="settings_symbol_flash_header">Symbols Flash on</string>
    <string name="settings_symbol_flash_text">While typing, each entered symbol or string will shortly be shown in big font next to the keypad.</string>
    <string name="settings_combo_flash_header">Combo Flash on</string>
    <string name="settings_combo_flash_text">When a combo is typed or swiped, the typed symbol or string will shortly be shown in big font next to the keypad.</string>
    <string name="settings_highlight_option_header">Button Highlight</string>
    <string name="settings_highlight_option_text">When a key is tapped or swiped to, it will be highlighted as a visual response. You can select the visual response options here.</string>
    <string name="settings_side_panel_hidden_header">Hide Side Panel</string>
    <string name="settings_side_panel_hidden_text">The side panel with Abc and Language indicators can be hidden to reduce keyboard width.</string>
    <string name="settings_fontsize_header">Font Size</string>
    <string name="settings_fontsize_text">Font size in the standalone ComboKey application (not when using this app as a system/default keyboard)</string>
    <string name="settings_padposition_header">Pad Width and Position</string>
    <string name="settings_padposition_text">In vertical orientation of the device, the keypad can be positioned left or right (one-hand typing), or at the center (two-hand typing).</string>
    <string name="settings_padheight_header">Pad Height and Position</string>
    <string name="settings_padheight_text">In vertical orientation, the height of the ComboKey system keypad can be adjusted to match your needs and the metrics of your device.</string>
    <string name="settings_padtype_header">Pad Type</string>
    <string name="settings_padtype_text">You can select the standard ComboKey 5-row keypad (default) or the experimental 3-row keypad.</string>
    <string name="settings_speaktype_header">Voice output</string>
    <string name="settings_speaktype_text">E.g. for studying languages. Depending on available/installed languages on your device, you can hear the text spoken, either each letter while typing,
        or the complete text starting from cursor position when you press the Play button (found while pressing Del/Backspace button). Please, select options here&#8230;</string>
    <string name="settings_landscapecolumns_header">Horizontal Pad Setting</string>
    <string name="settings_landscapecolumns_text">In landscape (horizontal) orientation, the available area for the keyboard is very broad. You can choose a layout that suits you best.</string>
    <string name="settings_theme_header">Themes</string>
    <string name="settings_theme_text">Set the visible style for the keyboard. Button types and colors can be selected.</string>
    <string name="settings_background_header">Transparent Background</string>
    <string name="settings_background_text">In the stand-alone app, use text on transparent background instead of black.</string>
    <string name="settings_autocaps_header">Automatic capitals</string>
    <string name="settings_autocaps_text">At the beginning of a sentence, use upper case automatically.</string>
    <string name="settings_magic_header">Magic Other Hand</string>
    <string name="settings_magic_text">Enable also single handed typing by mirroring swipes to the opposite side (Recommended. Very useful!)</string>
    <string name="settings_master_header">Master Mode!</string>
    <string name="settings_master_text">Hide all(!) button characters when you are completely familiar with the keyboard</string>
    <string name="settings_usertext_header">User defined text</string>
    <string name="settings_usertext_text">Define text here and then enter it directly from the keyboard by a shortcut combo. Useful e.g. for a frequent text like your email address.</string>
    <string name="settings_launch_header">App to start</string>
    <string name="settings_launch_text">Define here which of your installed applications you want to start directly, from the keyboard by a shortcut combo in number mode (Del key will show \'App\' icon). Give the app name exactly as it appears on the applications list in device settings (e.g. Calculator).</string>
    <string name="settings_removespace_header">No trailing space</string>
    <string name="settings_removespace_text">Shortcut words often end with a space. This can make typing quicker but you cannot add anything to the word or end the sentence without deleting the space. If you want to be consistent and always add the space yourself, use this setting.</string>
    <string name="settings_langcombo_header">Disable Lang combo</string>
    <string name="settings_langcombo_text">You can disable the possibility to switch between main and aux languages by using a keypad combo/swipe. This is to avoid undesired change of language during typing. Pressing the language names will do the job anyway.</string>
    <string name="settings_modechange_header">Disable quick Mode change</string>
    <string name="settings_modechange_text">You can disable the possibility to switch between abc, 123, Symbols and Emoji modes of the keypad with the extra short swipes (i.e. swiping to Del key from neighboring keys). This is to avoid undesired change of Mode during fast typing. Mode change is always possible the standard way, i.e. by using combos/swipes involving the Space key.</string>
    <string name="settings_mirror_header">Show mirror characters</string>
    <string name="settings_mirror_text">Show in yellow color, characters on two otherwise empty buttons that can be used to select characters on the opposite side of the keypad. Feature can help finding some common letters while using the 3-row key pad where the order of buttons is different from the 5-row pad.</string>
    <string name="settings_onehand_combo_header">One-finger Combos</string>
    <string name="settings_onehand_combo_text">In some situations, like reaching the device from a distance, swiping on the display may not feel practical. No problem! Instead of a swipe, you can tap the first key and hold it just a little bit longer. Now you can do a second tap on the swipe destination key with the same finger.</string>
    <string name="settings_words_header">Show Candidate Words</string>
    <string name="settings_words_text">You can add (+) words into Dictionary, or remove (x) them, while typing. These will later be proposed to you above the keypad. Instead of typing complete words, you can tap on a proposed word if valid. NOTE! DO NOT SAVE SENSITIVE INFO!</string>
    <string name="settings_hystamount_header">Sticky buttons</string>
    <string name="settings_hystamount_text">During swiping, buttons can be set to resist leaving their selected state to a certain degree. This may decrease slipping to an unwanted button, depending on your way of typing.</string>
    <string name="settings_terminal_mode_header">Terminal mode (SSH etc.)</string>
    <string name="settings_terminal_mode_text">The keyboard must operate differently, when used together with a terminal emulator or alike, to be compatible. This need is detected automatically but in some cases it may be necessary to be able force the Terminal mode on or off.</string>
    <string name="settings_font_type_header">Button Text Font</string>
    <string name="settings_font_type_text">The optional font on the buttons can be selected here.</string>
</resources>